# jyogi-OAuth

./: .editorconfig  .gitignore  README.md  justfile
.github/ISSUE_TEMPLATE/: documentation-issue.md  en-general.md  enf-bug-report.yml  enf-documentation-issue.yml  (+14 more)
api/: .env.template  .gitignore  Cargo.toml
api/src/: app.rs  error.rs  lib.rs  main.rs  state.rs
api/src/adapter/http/: mod.rs  validator.rs
api/src/adapter/http/handlers/: auth.rs  auth_handlers.rs
api/src/adapter/http/routes/: auth.rs  auth_routes.rs  mod.rs
api/src/adapter/persistence/: db.rs  mod.rs  refresh_token_repo.rs  refresh_token_repository.rs  session_repo.rs  session_repository.rs  user_credential_repository.rs  user_identity_repository.rs  user_repo.rs  user_repository.rs
api/src/config/: env.rs  mod.rs
api/src/domain/models/: auth.rs  mod.rs  refresh_token.rs  role.rs  sessions.rs  token.rs  user.rs  user_credential.rs  user_identity.rs
api/src/domain/ports/: mod.rs  refresh_token_repository.rs  session_repository.rs  user_credential_repository.rs  user_identity_repository.rs  user_repository.rs
api/src/errors/: api.rs  app.rs  config.rs  mod.rs
api/src/service/: auth_old.rs  auth_service.rs
api/src/service/auth/: jwt.rs  mod.rs  refresh.rs
api/tests/: health.rs
docs/: 01_feature-list_md.md  03_screen-flow_md.md  04_permission-design.md  05_erd.md  06_directory.md  07_infrastructure.md  08_logging.md  09_issue_management.md  README.md
migration/: Dockerfile
migrations/: 0005_sessions.up.sql  0006_refresh_tokens.up.sql
tests/: .gitignore  requirements.txt  test.py
(+16 files in other folders)
